objects/Knowledge_Rendering__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Channel_Types_1__c</fullName>
        <label>Answer Channel Types 1</label>
        <picklist>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPCUK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCLEX TTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED DOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Registration Only (RO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC IHTTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper and Pencil Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice Test Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Test Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zero Foot Print (ZFP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anywhere Proctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Procotored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Proctoring</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Answer_Channel_Types_2__c</fullName>
        <label>Answer Channel Types 2</label>
        <picklist>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPCUK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCLEX TTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED DOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Registration Only (RO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC IHTTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper and Pencil Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice Test Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Test Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zero Foot Print (ZFP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anywhere Proctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Procotored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Proctoring</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Answer_Channel_Types_3__c</fullName>
        <label>Answer Channel Types 3</label>
        <picklist>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPCUK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCLEX TTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED DOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Registration Only (RO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC IHTTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper and Pencil Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice Test Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Test Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zero Foot Print (ZFP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anywhere Proctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Procotored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Proctoring</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Details_Channel_Types_1__c</fullName>
        <label>Details Channel Types 1</label>
        <picklist>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPCUK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCLEX TTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED DOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Registration Only (RO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC IHTTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper and Pencil Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice Test Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Test Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zero Foot Print (ZFP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anywhere Proctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Procotored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Proctoring</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Details_Channel_Types_2__c</fullName>
        <label>Details Channel Types 2</label>
        <picklist>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPCUK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCLEX TTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED DOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Registration Only (RO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC IHTTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper and Pencil Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice Test Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Test Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zero Foot Print (ZFP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anywhere Proctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Procotored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Proctoring</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Details_Channel_Types_3__c</fullName>
        <label>Details Channel Types 3</label>
        <picklist>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPCUK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCLEX TTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED DOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Registration Only (RO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC IHTTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper and Pencil Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice Test Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Test Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zero Foot Print (ZFP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anywhere Proctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Procotored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Proctoring</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>More_Information_1_Channel_Types__c</fullName>
        <label>More Information 1 Channel Types</label>
        <picklist>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPCUK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCLEX TTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED DOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Registration Only (RO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC IHTTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper and Pencil Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice Test Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Test Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zero Foot Print (ZFP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anywhere Proctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Procotored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Proctoring</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>More_Information_2_Channel_Types__c</fullName>
        <label>More Information 2 Channel Types</label>
        <picklist>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPCUK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCLEX TTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED DOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Registration Only (RO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC IHTTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper and Pencil Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice Test Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Test Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zero Foot Print (ZFP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anywhere Proctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Procotored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Proctoring</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>More_Information_3_Channel_Types__c</fullName>
        <label>More Information 3 Channel Types</label>
        <picklist>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPCUK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCLEX TTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED DOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Registration Only (RO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC IHTTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper and Pencil Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice Test Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Test Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zero Foot Print (ZFP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anywhere Proctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Procotored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Proctoring</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Overview_1_Channel_Types__c</fullName>
        <label>Overview 1 Channel Types</label>
        <picklist>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPCUK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCLEX TTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED DOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Registration Only (RO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC IHTTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper and Pencil Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice Test Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Test Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zero Foot Print (ZFP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anywhere Proctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Procotored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Proctoring</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Overview_2_Channel_Types__c</fullName>
        <label>Overview 2 Channel Types</label>
        <picklist>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPCUK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCLEX TTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED DOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Registration Only (RO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC IHTTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper and Pencil Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice Test Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Test Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zero Foot Print (ZFP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anywhere Proctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Procotored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Proctoring</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Overview_3_Channel_Types__c</fullName>
        <label>Overview 3 Channel Types</label>
        <picklist>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPCUK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCLEX TTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED DOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Registration Only (RO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC IHTTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper and Pencil Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice Test Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Test Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zero Foot Print (ZFP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anywhere Proctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Procotored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Proctoring</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Question_Channel_Types_1__c</fullName>
        <label>Question Channel Types 1</label>
        <picklist>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPCUK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCLEX TTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED DOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Registration Only (RO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC IHTTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper and Pencil Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice Test Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Test Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zero Foot Print (ZFP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anywhere Proctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Procotored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Proctoring</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Question_Channel_Types_2__c</fullName>
        <label>Question Channel Types 2</label>
        <picklist>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPCUK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCLEX TTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED DOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Registration Only (RO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC IHTTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper and Pencil Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice Test Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Test Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zero Foot Print (ZFP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anywhere Proctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Procotored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Proctoring</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Question_Channel_Types_3__c</fullName>
        <label>Question Channel Types 3</label>
        <picklist>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPCUK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCLEX TTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED DOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Registration Only (RO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC IHTTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper and Pencil Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice Test Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Test Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zero Foot Print (ZFP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anywhere Proctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Procotored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Proctoring</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Steps_1_Channel_Types__c</fullName>
        <label>Steps 1 Channel Types</label>
        <picklist>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPCUK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCLEX TTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC GED DOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Registration Only (RO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVTC IHTTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper and Pencil Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice Test Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Test Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zero Foot Print (ZFP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anywhere Proctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Procotored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Proctoring</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>